--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"autoprefixer": "^10.4.16",
+		"lottie-web": "^5.12.2",
 		"postcss": "^8.4.31",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.5",
